RESOLVED FIXED299903
Fix ENABLE(CORE_IPC_SIGNPOSTS) builds
https://bugs.webkit.org/show_bug.cgi?id=299903
Summary Fix ENABLE(CORE_IPC_SIGNPOSTS) builds
Ben Nham
Reported 2025-09-30 15:01:11 PDT
Fix the build when CORE_IPC_SIGNPOSTS is enabled and LOGD_BLOCKING_IN_WEBCONTENT is disabled.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-30 15:01:59 PDT
Ben Nham
Comment 2 2025-09-30 15:03:55 PDT
EWS
Comment 3 2025-10-02 14:44:45 PDT
Committed 300901@main (6cbe39143180): <https://commits.webkit.org/300901@main> Reviewed commits have been landed. Closing PR #51595 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.