Add IPC signposts rdar://161685428 https://bugs.webkit.org/show_bug.cgi?id=299903

Reviewed by Per Arne Vollan.

This enables the CORE_IPC_SIGNPOSTS compile time feature I added a couple of years ago, since adding
IPC to traces makes them significantly more useful for debugging weird timing issues.

Since IPC signposts can be pretty spammy, we gate emitting IPC signposts behind a user default which
defaults to off. Users can enable IPC signposts via these prefs:

 - WebKitDebugIPCSignposts: enables signposts from IPC::Connection
 - WebKitDebugStreamingIPCSignposts: enables signposts from IPC::StreamClientConnection

In the default case where signposts are off, the various IPC send paths contain one extra
in-framework function call to check whether signposts are enabled, so we don't expect this to affect
perf unless the IPC signpost preference is enabled.

* Source/WTF/wtf/PlatformEnable.h:
* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::forceEnableSignposts):
(IPC::Connection::signpostsEnabled):
(IPC::generateSignpostIdentifier):
(IPC::Connection::sendMessage):
(IPC::Connection::sendMessageWithAsyncReply):
(IPC::Connection::waitForMessage):
(IPC::Connection::sendSyncMessage):
(IPC::Connection::generateSignpostIdentifier): Deleted.
* Source/WebKit/Platform/IPC/Connection.h:
* Source/WebKit/Platform/IPC/StreamClientConnection.cpp:
(IPC::StreamClientConnection::forceEnableSignposts):
(IPC::StreamClientConnection::signpostsEnabled):
(IPC::StreamClientConnection::generateSignpostIdentifier):
(IPC::StreamClientConnection::emitSendSignpost):
* Source/WebKit/Platform/IPC/StreamClientConnection.h:
(IPC::StreamClientConnection::send):
(IPC::StreamClientConnection::sendWithAsyncReply):
(IPC::StreamClientConnection::sendSync):
* Source/WebKit/Shared/AuxiliaryProcess.cpp:
(WebKit::AuxiliaryProcess::applyProcessCreationParameters):
* Source/WebKit/Shared/AuxiliaryProcessCreationParameters.h:
* Source/WebKit/Shared/AuxiliaryProcessCreationParameters.serialization.in:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::auxiliaryProcessParameters):

* Source/WebKit/UIProcess/WebsiteData/Cocoa/ScreenTimeWebsiteDataSupport.mm:

Canonical link: https://commits.webkit.org/300901@main