Source/WTF/wtf/PlatformEnableCocoa.h
@@ -1133,3 +1133,8 @@
 #if !defined(ENABLE_NETWORK_CACHE_SIGNPOSTS)
 #define ENABLE_NETWORK_CACHE_SIGNPOSTS 1
 #endif
+
+// <os/signpost.h> doesn't work from Swift since some of its macros are guarded by #ifndef __swift__.
+#if !defined(ENABLE_CORE_IPC_SIGNPOSTS) && !defined(__swift__)
+#define ENABLE_CORE_IPC_SIGNPOSTS 1
+#endif
