Source/WebKit/Platform/IPC/StreamClientConnection.cpp
@@ -25,7 +25,12 @@
 
 #include "config.h"
 #include "StreamClientConnection.h"
+#include <wtf/RuntimeApplicationChecks.h>
 #include <wtf/TZoneMallocInlines.h>
+
+#if PLATFORM(COCOA)
+#include <CoreFoundation/CoreFoundation.h>
+#endif
 
 namespace IPC {
 
@@ -168,5 +173,42 @@ void StreamClientConnection::removeWorkQueueMessageReceiver(ReceiverName name, u
 {
     m_connection->removeWorkQueueMessageReceiver(name, destinationID);
 }
+
+#if ENABLE(CORE_IPC_SIGNPOSTS)
+
+static bool streamingIPCSignpostsEnabled = false;
+
+void StreamClientConnection::forceEnableSignposts()
+{
+    streamingIPCSignpostsEnabled = true;
+}
+
+bool StreamClientConnection::signpostsEnabled()
+{
+    static bool hasReadPreferences = false;
+    if (!hasReadPreferences) [[unlikely]] {
+        if (!isInAuxiliaryProcess() && CFPreferencesGetAppBooleanValue(CFSTR("WebKitDebugStreamingIPCSignposts"), kCFPreferencesCurrentApplication, nullptr))
+            streamingIPCSignpostsEnabled = true;
+        hasReadPreferences = true;
+    }
+
+    return streamingIPCSignpostsEnabled;
+}
+
+uintptr_t StreamClientConnection::generateSignpostIdentifier()
+{
+    static std::atomic<uintptr_t> identifier;
+    return ++identifier;
+}
+
+void StreamClientConnection::emitSendSignpost(MessageName messageName)
+{
+    // Signposts can turn in to log message IPCs when emitted from WebContent. Don't emit a signpost
+    // for log messages to avoid an infinite number of signposts.
+    if (signpostsEnabled() && receiverName(messageName) != IPC::ReceiverName::LogStream) [[unlikely]]
+        WTFEmitSignpost(generateSignpostIdentifier(), StreamClientConnection, "send: %" PUBLIC_LOG_STRING, description(messageName).characters());
+}
+
+#endif
 
 }
