Source/WebKit/Shared/AuxiliaryProcess.cpp
@@ -27,10 +27,12 @@
 #include "AuxiliaryProcess.h"
 
 #include "AuxiliaryProcessCreationParameters.h"
+#include "Connection.h"
 #include "ContentWorldShared.h"
 #include "LogInitialization.h"
 #include "Logging.h"
 #include "SandboxInitializationParameters.h"
+#include "StreamClientConnection.h"
 #include "WebPageProxyIdentifier.h"
 #include <WebCore/LogInitialization.h>
 #include <pal/SessionID.h>
@@ -255,6 +257,12 @@ void AuxiliaryProcess::applyProcessCreationParameters(AuxiliaryProcessCreationPa
 #endif
 #if PLATFORM(COCOA)
     SecureCoding::applyProcessCreationParameters(WTFMove(parameters));
+#endif
+#if ENABLE(CORE_IPC_SIGNPOSTS)
+    if (parameters.shouldEnableIPCSignposts)
+        IPC::Connection::forceEnableSignposts();
+    if (parameters.shouldEnableStreamingIPCSignposts)
+        IPC::StreamClientConnection::forceEnableSignposts();
 #endif
 }
 
