Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp
@@ -28,9 +28,11 @@
 
 #include "AuxiliaryProcessCreationParameters.h"
 #include "AuxiliaryProcessMessages.h"
+#include "Connection.h"
 #include "Logging.h"
 #include "MessageNames.h"
 #include "OverrideLanguages.h"
+#include "StreamClientConnection.h"
 #include "UIProcessLogInitialization.h"
 #include "WebPageProxy.h"
 #include "WebPageProxyIdentifier.h"
@@ -560,6 +562,11 @@ AuxiliaryProcessCreationParameters AuxiliaryProcessProxy::auxiliaryProcessParame
     auto* exemptClassNames = SecureCoding::classNamesExemptFromSecureCodingCrash();
     if (exemptClassNames)
         parameters.classNamesExemptFromSecureCodingCrash = WTF::makeUnique<HashSet<String>>(*exemptClassNames);
+#endif
+
+#if ENABLE(CORE_IPC_SIGNPOSTS)
+    parameters.shouldEnableIPCSignposts = IPC::Connection::signpostsEnabled();
+    parameters.shouldEnableStreamingIPCSignposts = IPC::StreamClientConnection::signpostsEnabled();
 #endif
 
     return parameters;
